Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222610.yaml
@@ -261,6 +261,19 @@ test_cases:
     18DAF11027CE168008EFFFF1
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFDDB0
+    18DAF110216DE7FC0CC82406
+    18DAF110226C51C32B342000
+    18DAF11023630E4200A99200
+    18DAF1102401470000000000
+    18DAF110250F0000020B00DE
+    18DAF110261F002F008CB202
+    18DAF110272A16BC096F00CB
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AC_CLUTCH: 1
     HONDA_GENERATOR: 0
   response: |-
