Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DB33.0142.yaml
+++ b/tests/test_cases/2025/commands/DB33.0142.yaml
@@ -16,6 +16,12 @@ test_cases:
     VPWR: 14.497
   response: 18DAF1EF04414238A1
 - expected_values:
+    VPWR: 13.639
+  response: |-
+    18DAF1EF04414238A6
+    18DAF11004414238B0
+    18DAF11E0441423547
+- expected_values:
     VPWR: 13.696
   response: |-
     18DAF1EF04414238C4
