--- a/tests/test_cases/2025/commands/DB33.0104.yaml
+++ b/tests/test_cases/2025/commands/DB33.0104.yaml
@@ -16,11 +16,17 @@ test_cases:
     18DAF1100341040F
     18DAF11E03410400
 - expected_values:
-    LOAD_PCT: 24.70588
+    LOAD_PCT: 0
   response: |-
-    18DAF1EF0341043E
-    18DAF11E0341043F
-    18DAF1100341043F
+    18DAF1EF03410400
+    18DAF11E03410400
+    18DAF11003410400
+- expected_values:
+    LOAD_PCT: 98.43137
+  response: |-
+    18DAF1EF034104FB
+    18DAF110034104FC
+    18DAF11E034104FB
 - expected_values:
     LOAD_PCT: 99.60784
   response: |-
