Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222610.yaml
@@ -27,6 +27,19 @@ test_cases:
     18DAF110270212DC1D090062
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFDDB0
+    18DAF110216DE7FC02F42507
+    18DAF110223F678546865C00
+    18DAF1102362009C007F6900
+    18DAF1102403CD0000000000
+    18DAF110250F0800010100C3
+    18DAF110262E0098008C2700
+    18DAF1102705106D1ACBFFF9
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AC_CLUTCH: 1
     HONDA_GENERATOR: 0
   response: |-
