Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DB33.0144.yaml
+++ b/tests/test_cases/2017/commands/DB33.0144.yaml
@@ -18,6 +18,11 @@ test_cases:
     18DAF1100441447D6E
     18DAF1602500000000000000
 - expected_values:
+    EQ_RAT: 0.98637
+  response: |-
+    18DAF1100441447E41
+    18DAF1602336000000000000
+- expected_values:
     EQ_RAT: 1.00746
   response: |-
     18DAF11004414480F4
