--- a/tests/test_cases/2017/commands/DB33.0104.yaml
+++ b/tests/test_cases/2017/commands/DB33.0104.yaml
@@ -24,10 +24,15 @@ test_cases:
     18DAF1602600000000000000
     18DAF11E03410435
 - expected_values:
-    LOAD_PCT: 95.29412
+    LOAD_PCT: 94.11765
+  response: |-
+    18DAF110034104EC
+    18DAF11E034104F0
+- expected_values:
+    LOAD_PCT: 90.98039
   response: |-
     18DAF110034104F5
-    18DAF11E034104F3
+    18DAF11E034104E8
 - expected_values:
     LOAD_PCT: 100
   response: 18DAF110034104FF
