--- a/tests/test_cases/2017/commands/DB33.0144.yaml
+++ b/tests/test_cases/2017/commands/DB33.0144.yaml
@@ -27,3 +27,8 @@ test_cases:
   response: |-
     18DAF11004414480F4
     18DAF1602500000000000000
+- expected_values:
+    EQ_RAT: 0.99834
+  response: |-
+    18DAF11E2500000000005555
+    18DAF1100441447FC9
