Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222610.yaml
@@ -525,6 +525,19 @@ test_cases:
     HONDA_GENERATOR: 0
   response: |-
     18DAF1101039622610FFDDB0
+    18DAF110216DE7FC4BC3B294
+    18DAF11022247CCB288A5F00
+    18DAF110236264FF009E9000
+    18DAF11024044C0000000000
+    18DAF110250F0000439C00D5
+    18DAF110262500FF008CCF02
+    18DAF110279C16A91BA20098
+    18DAF1102800005555555555
+- expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFDDB0
     18DAF110216DE7FC4E14A688
     18DAF110222779C32C8B5F00
     18DAF110236332FD009E9100
