Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA1E.1E.223086.yaml
+++ b/tests/test_cases/2017/commands/DA1E.1E.223086.yaml
@@ -193,6 +193,15 @@ test_cases:
     18DAF11E24F0800107000000
     18DAF11E2500000000005555
 - expected_values:
+    HONDA_GEAR_V2: D1
+  response: |-
+    18DAF11E1027623086FFFFFF
+    18DAF11E210301F401F40C4B
+    18DAF11E220CC501F4170001
+    18DAF11E230100000100F080
+    18DAF11E24F0100201000000
+    18DAF11E2500000000005555
+- expected_values:
     HONDA_GEAR_V2: D8
   response: |-
     18DAF11E1027623086FFFFFF
