--- a/tests/test_cases/2017/commands/DB33.0131.yaml
+++ b/tests/test_cases/2017/commands/DB33.0131.yaml
@@ -48,6 +48,12 @@ test_cases:
     18DAF11E0441310809
     18DAF1602700000000000000
 - expected_values:
+    CLR_DIST: 2604
+  response: |-
+    18DAF1100441310A2D
+    18DAF11E0441310A2C
+    18DAF1602600000000000000
+- expected_values:
     CLR_DIST: 3873
   response: |-
     18DAF1100441310F25
