Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DB33.0124.yaml
+++ b/tests/test_cases/2017/commands/DB33.0124.yaml
@@ -25,6 +25,18 @@ test_cases:
     O2S11_VOLT: 1.68851
   response: 18DAF11006412475FF360F
 - expected_values:
+    LAMBDA11_VOLT: 0.96848
+    O2S11_VOLT: 1.91191
+  response: |-
+    18DAF1100641247BF73D36
+    18DAF1602700000000000000
+- expected_values:
+    LAMBDA11_VOLT: 0.99011
+    O2S11_VOLT: 1.98133
+  response: |-
+    18DAF1100641247EBC3F6F
+    18DAF1602700000000000000
+- expected_values:
     LAMBDA11_VOLT: 1
     O2S11_VOLT: 0
   response: 18DAF11006412480000000
