--- a/tests/test_cases/2017/commands/DB33.0131.yaml
+++ b/tests/test_cases/2017/commands/DB33.0131.yaml
@@ -54,6 +54,12 @@ test_cases:
     18DAF11E0441310A2C
     18DAF1602600000000000000
 - expected_values:
+    CLR_DIST: 2688
+  response: |-
+    18DAF1100441310A81
+    18DAF11E0441310A80
+    18DAF1602500000000000000
+- expected_values:
     CLR_DIST: 3873
   response: |-
     18DAF1100441310F25
