Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222611.yaml
@@ -425,6 +425,19 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AIRGAS_RATIO: 14.36242
+    HONDA_FUEL_AIR_RATIO: 0
+  response: |-
+    18DAF1101039622611000FFF
+    18DAF11021FFFC007FCE7D0F
+    18DAF110227F807F03022200
+    18DAF11023677FCE7D0F7F80
+    18DAF110247E16022200677F
+    18DAF11025ED7E357C7C7F03
+    18DAF11026021F00663C3C00
+    18DAF1102700000000000000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AIRGAS_RATIO: 14.47547
     HONDA_FUEL_AIR_RATIO: 0
   response: |-
