--- a/tests/test_cases/2017/commands/DB33.0104.yaml
+++ b/tests/test_cases/2017/commands/DB33.0104.yaml
@@ -18,6 +18,12 @@ test_cases:
     18DAF11E03410424
     18DAF1602600000000000000
 - expected_values:
+    LOAD_PCT: 43.92157
+  response: |-
+    18DAF11003410434
+    18DAF11E03410470
+    18DAF1602500000000000000
+- expected_values:
     LOAD_PCT: 20.78431
   response: |-
     18DAF11003410435
