Update command data for Honda/Pilot

--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -81,6 +81,9 @@ supported_commands_by_ecu:
   - DB33.0144:EQ_RAT
   - DB33.01A6:ODO
 unsupported_commands_by_ecu:
+  "DA01":
+  - DA01.01.22202A:HONDA_AAT_CAB,HONDA_AAT_OUT,HONDA_CELL_MAX_SOC,HONDA_CELL_MIN_SOC,HONDA_HVB_CAP,HONDA_HVB_C_TOTAL,HONDA_HVB_V,HONDA_SOC
+  - DA01.01.22202C:HONDA_ECT_1,HONDA_ECT_2,HONDA_ECT_3,HONDA_ECT_4,HONDA_HVB_MOD_1A_T,HONDA_HVB_MOD_3A_T
   "DA0E":
   - DA0E.222610
   - DA0E.222611
