--- a/tests/test_cases/2017/commands/DB33.012F.yaml
+++ b/tests/test_cases/2017/commands/DB33.012F.yaml
@@ -31,6 +31,11 @@ test_cases:
     18DAF11003412F2F
     18DAF1602800005555555555
 - expected_values:
+    FLI: 67.05882
+  response: |-
+    18DAF11003412FAB
+    18DAF16023DB003200000000
+- expected_values:
     FLI: 78.82353
   response: |-
     18DAF11003412FC9
